testsuite/poke.pkl/if-diag-1.pk
/* { dg-do compile } */

if ("foo")  /* { dg-error "invalid expression.*\n.*expected boolean" } */
  {
  }
